--- a/Section_4_off_policy_control.ipynb
+++ b/Section_4_off_policy_control.ipynb
@@ -444,7 +444,7 @@
     "            qsa = action_values[state_t][action_t]\n",
     "#             print(f\"action_t {action_t}, state_t {state_t}, {action_values[state_t][action_t]}\")\n",
     "#             print(f\"csa {csa[state_t][action_t]}\")\n",
-    "            bla = (W/csa[state_t][action_t]) * (G-qsa)\n",
+    "#             bla = (W/csa[state_t][action_t]) * (G-qsa)\n",
     "\n",
     "            action_values[state_t][action_t] += (W/csa[state_t][action_t]) * (G-qsa)\n",
     "            \n",
@@ -509,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
