--- a/Section_10_reinforce_CartPole.ipynb
+++ b/Section_10_reinforce_CartPole.ipynb
@@ -87,6 +87,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F \n",
+    "from torch import optim\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from pyvirtualdisplay import Display\n",
+    "from IPython import display as ipythondisplay\n",
+    "from IPython.display import clear_output\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import random, os.path, math, glob, csv, base64, itertools, sys\n",
+    "import gym\n",
+    "from gym.wrappers import Monitor\n",
+    "from pprint import pprint\n",
+    "\n",
+    "# The following code is will be used to visualize the environments.\n",
+    "\n",
+    "def show_video(directory):\n",
+    "    html = []\n",
+    "    for mp4 in Path(directory).glob(\"*.mp4\"):\n",
+    "        video_b64 = base64.b64encode(mp4.read_bytes())\n",
+    "        html.append('''<video alt=\"{}\" autoplay \n",
+    "                      loop controls style=\"height: 400px;\">\n",
+    "                      <source src=\"data:video/mp4;base64,{}\" type=\"video/mp4\" />\n",
+    "                 </video>'''.format(mp4, video_b64.decode('ascii')))\n",
+    "    ipythondisplay.display(ipythondisplay.HTML(data=\"<br>\".join(html)))\n",
+    "    \n",
+    "display = Display(visible=0, size=(1400, 900))\n",
+    "display.start();\n",
+    "\n",
+    "def make_seed(seed):\n",
+    "    np.random.seed(seed=seed)\n",
+    "    torch.manual_seed(seed=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "import torch\n",
     "import gym\n",
@@ -118,21 +163,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env = gym.make('CartPole-v0')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dims = env.observation_space.shape[0]\n",
+    "actions = env.action_space.n\n",
+    "print(dims, actions)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(env.render(mode=\"rgb_array\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,28 +208,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_nenvs = os.cpu_count()\n",
+    "print(num_nenvs)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_env(env_name, seed):\n",
+    "    env = gym.make(env_name)\n",
+    "    seed_everything(env, seed = seed)\n",
+    "    return env"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env_fns = [lambda: create_env('CartPole-v0', rank) for rank in range(num_nenvs)]\n",
+    "parallel_env = ParallelEnv(env_fns)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "parallel_env.reset()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,7 +256,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PreprocessEnv(ParallelWrapper):\n",
+    "    def __init__(self, parallel_env):\n",
+    "        ParallelWrapper.__init__(self, parallel_env)\n",
+    "        \n",
+    "    def reset(self):\n",
+    "        state = self.venv.reset()\n",
+    "        return torch.from_numpy(state).float()\n",
+    "        \n",
+    "    def step_async(self, actions):\n",
+    "        # [[3],[2], [1]] -> [3,2,1]\n",
+    "        actions = actions.squeeze().numpy()\n",
+    "        self.venv.step_async(actions)\n",
+    "        \n",
+    "        \n",
+    "    def step_wait(self):\n",
+    "        next_state, reward, done, info = self.venv.step_wait()\n",
+    "        next_state = torch.from_numpy(next_state).float()\n",
+    "        reward = torch.tensor(reward).unsqueeze(1).float()\n",
+    "        done = torch.tensor(done).unsqueeze(1)\n",
+    "        return next_state, reward, done, info\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
@@ -190,6 +287,16 @@
    "outputs": [],
    "source": [
     "parallel_env = PreprocessEnv(parallel_env)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = parallel_env.reset()\n",
+    "_, reward, done, _ = parallel_env.step(torch.zeros(num_nenvs, 1, dtype = torch.int32))"
    ]
   },
   {
@@ -436,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
